29 March 2007

* Tags are now done using an action (tag) rather than a special-case match
  rule. The old way still works but generates a warning which will become an
  error within a few releases.
* Because yacc needs to move back and forwards, just swapping the file out from
  under it when including can cause problems. So, switch to letting lex do all
  the work and feed the include file to yacc as if it was inline. This sucks a
  bit but there aren't many other options. Reported by Frank Terbeck.
* Lambda actions:

	match "regexp" action mbox ...
	match "regexp" actions {
		rewrite ...
		mbox ...
	}

28 March 2007

* Compound actions, using a list in {}s, eg:

	action "abc" {
		rewrite ...
		mbox ...
	}

* Macros shouldn't be expanded inside single quotes. Fixed.
* + may be used to concatenate strings.
* Allow short-circuit evaluation of 'and' and 'or' operators.

27 March 2007

* Accept size with either CRLF or LF as when warning about bad size predictions
  from POP3 servers. Google gives the size with LF and then sends the mail data
  (as it must do) with CRLF.

26 March 2007

* Fix stupid use of struct strings for uid_ts and make users be printed when
  printing rules, actions, accounts.
* Option to use SYSV shared memory (build with make -DSHM_SYSV). Not a real
  option, or documented, yet because I'm not sure how to deal with cleaning up
  on SIGTERM. It might even go away again.
* Play some games to ensure that that the full extent of the mmap'd temporary
  file is actually writable before using it. Otherwise if there is insufficient
  disk space we risk getting an unexpected SIGBUS later when trying to use it.
* When sending delivery done messages, check that the child process isn't dead
  before trying to talk to it. 

25 March 2007

* Handle unlink(2)/fclose(3) failures, led to discovery of a missing fflush
  before fsync and a double-unlink of a tmp file (bad!), also fixed. Part of bug